--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.FASTFOOD_AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.FASTFOOD_AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.FASTFOOD_AWS_SESSION_TOKEN }}
           aws-region: us-east-1
 
       - name: Terraform Init
