--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -31,8 +31,10 @@ jobs:
 
       - name: Terraform Plan
         run: |
+            cd infra
             terraform plan
 
       - name: Terraform Apply
         run: |
+            cd infra
             terraform apply --auto-approve
