--- a/.github/workflows/terraform-pipeline.yml
+++ b/.github/workflows/terraform-pipeline.yml
@@ -7,7 +7,7 @@ jobs:
   build-terraform:
     runs-on: ubuntu-latest
     env:
-      TF_db_password: ${{ secrets.DB_PASSWORD }}
+      TF_VAR_db_password: ${{ secrets.DB_PASSWORD }}
 
     steps:
       - name: Checkout Repository
