fix: adding -backend-config in terraform init to save tfstate in s3

--- a/.github/workflows/build-terraform-pipeline.yml
+++ b/.github/workflows/build-terraform-pipeline.yml
@@ -29,7 +29,10 @@ jobs:
       - name: Terraform Init
         run: |
             cd infra
-            terraform init
+            terraform init \
+              -backend-config="bucket=ratl-fiaptech1-2024-terraform-state" \
+              -backend-config="key=fiap/tech-challenge" \
+              -backend-config="region=us-east-1"
 
       - name: Terraform Plan
         run: |
